# app

./: Cargo.toml  README.md  com.sam_morrow.WizardNotes.json  meson.build
build-aux/: cargo.sh
core/: Cargo.toml
core/src/: lib.rs
data/: com.sam_morrow.WizardNotes.appdata.xml.in  com.sam_morrow.WizardNotes.desktop.in  com.sam_morrow.WizardNotes.gschema.xml  meson.build
gtk-app/: Cargo.toml
gtk-app/src/: config.rs  main.rs  meson.build  window.rs  window.ui  wizard_notes.gresource.xml
gtk-app/src/gtypes/: mod.rs  note_model.rs
po/: POTFILES  meson.build
src/: main.rs
