[package]
name = "wizard-notes"
version = "0.1.0"
authors = ["Sam Morrow <me@sam-morrow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
chrono = "0.4"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.rusqlite]
version = "0.24"
features = ["bundled", "uuid", "chrono"]
