[package]
name = "gtk-app"
version = "0.1.0"
edition = "2018"

[dependencies.gtk]
version = "0.9"
features = ["v3_24"]

[dependencies.gdk]
version = "0.13"
features = ["v3_24"]

[dependencies.gio]
version = "0.9"
features = ["v2_60"]

[dependencies.glib]
version = "0.10"
features = ["v2_60"]

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]

[dependencies.libhandy]
version = "0.7.1"

[dependencies.wizard_core]
path = "../core"
